--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </ul>
       </div>
     </nav>
+
     <!-- ARTWORK con "M" ripetute -->
 
     <section class="banner">
@@ -9359,171 +9360,184 @@
                 </div>
                 <img class="img-card" src="assets/imgs/image08.jpeg" />
               </div>
-            </div>
-            <!-- card 1  -->
+              <!-- card 1  -->
 
-            <div class="article-2">
-              <div class="text-article-2">
-                <img src="assets/imgs/image09.jpeg" alt="image-01" />
-                <p>Taru Anniina Liikanen</p>
-                <h4>Is Taylor Swift Allowed to Speak About Fat?</h4>
-                <p>
-                  Can you speak about your trauma if you don't look traumatized?
-                </p>
-                <div class="dates">
-                  <div class="">
-                    <p>Oct 24</p>
-                    <p>6 min read</p>
-                    <p><span>Health  </span></p>
-                    <img src="assets/imgs/svg/star.svg" />
+              <div class="article-2">
+                <div class="text-article-2">
+                  <img src="assets/imgs/image09.jpeg" alt="image-01" />
+                  <p>Taru Anniina Liikanen</p>
+                  <h4>Is Taylor Swift Allowed to Speak About Fat?</h4>
+                  <p>
+                    Can you speak about your trauma if you don't look
+                    traumatized?
+                  </p>
+                  <div class="dates">
+                    <div class="">
+                      <p>Oct 24</p>
+                      <p>6 min read</p>
+                      <p><span>Health  </span></p>
+                      <img src="assets/imgs/svg/star.svg" />
+                    </div>
+                    <img src="assets/imgs/svg/bookmark.svg" />
                   </div>
-                  <img src="assets/imgs/svg/bookmark.svg" />
                 </div>
+                <img class="img-card" src="assets/imgs/image10.jpeg" />
               </div>
-              <img class="img-card" src="assets/imgs/image10.jpeg" />
-            </div>
 
-            <!-- card 2  -->
+              <!-- card 2  -->
 
-            <div class="article-2">
-              <div class="text-article-2">
-                <img src="assets/imgs/image11.jpeg" alt="image-01" />
-                <p>David Rodenas, Ph. D.</p>
-                <h4>Don’t Screw Up, You Will Be Found Guilty</h4>
-                <p>
-                  Software Engineer, yours is the right to produce high-quality
-                  work at all times, also the liability.
-                </p>
-                <div class="dates">
-                  <div class="">
-                    <p>Oct 15</p>
-                    <p>5 min read</p>
-                    <p><span>Software Engineering   </span></p>
-                    <img src="assets/imgs/svg/star.svg" />
+              <div class="article-2">
+                <div class="text-article-2">
+                  <img src="assets/imgs/image11.jpeg" alt="image-01" />
+                  <p>David Rodenas, Ph. D.</p>
+                  <h4>Don’t Screw Up, You Will Be Found Guilty</h4>
+                  <p>
+                    Software Engineer, yours is the right to produce
+                    high-quality work at all times, also the liability.
+                  </p>
+                  <div class="dates">
+                    <div class="">
+                      <p>Oct 15</p>
+                      <p>5 min read</p>
+                      <p><span>Software Engineering   </span></p>
+                      <img src="assets/imgs/svg/star.svg" />
+                    </div>
+                    <img src="assets/imgs/svg/bookmark.svg" />
                   </div>
-                  <img src="assets/imgs/svg/bookmark.svg" />
                 </div>
+                <img class="img-card" src="assets/imgs/image12.png" />
               </div>
-              <img class="img-card" src="assets/imgs/image12.png" />
-            </div>
-            <!-- card 3  -->
+              <!-- card 3  -->
 
-            <div class="article-2">
-              <div class="text-article-2">
-                <img src="assets/imgs/image13.png" alt="image-01" />
-                <p>Microsoft Design</p>
-                <h4>Leave No Trace</h4>
-                <p>
-                  How product designers can break from the status quo and help
-                  our planet
-                </p>
-                <div class="dates">
-                  <div class="">
-                    <p>Oct 25</p>
-                    <p>11 min read</p>
-                    <p><span>Sustainability  </span></p>
-                    <img src="assets/imgs/svg/star.svg" />
+              <div class="article-2">
+                <div class="text-article-2">
+                  <img src="assets/imgs/image13.png" alt="image-01" />
+                  <p>Microsoft Design</p>
+                  <h4>Leave No Trace</h4>
+                  <p>
+                    How product designers can break from the status quo and help
+                    our planet
+                  </p>
+                  <div class="dates">
+                    <div class="">
+                      <p>Oct 25</p>
+                      <p>11 min read</p>
+                      <p><span>Sustainability  </span></p>
+                      <img src="assets/imgs/svg/star.svg" />
+                    </div>
+                    <img src="assets/imgs/svg/bookmark.svg" />
                   </div>
-                  <img src="assets/imgs/svg/bookmark.svg" />
                 </div>
+                <img class="img-card" src="assets/imgs/image14.png" />
               </div>
-              <img class="img-card" src="assets/imgs/image14.png" />
-            </div>
 
-            <!-- card 4  -->
+              <!-- card 4  -->
 
-            <div class="article-2">
-              <div class="text-article-2">
-                <img src="assets/imgs/image15.jpeg" alt="image-01" />
-                <p>Scott H. Young</p>
-                <h4>Variability, Not Repetition, is the Key to Mastery</h4>
-                <p>
-                  Bruce Lee is reported to have said, “I fear not the man who
-                  has practiced 10,000 kicks once, but the man who has practiced
-                  one kick 10,000...
-                </p>
-                <div class="dates">
-                  <div class="">
-                    <p>Oct 26</p>
-                    <p>7 min read</p>
-                    <p><span>Health  </span></p>
-                    <img src="assets/imgs/svg/star.svg" />
+              <div class="article-2">
+                <div class="text-article-2">
+                  <img src="assets/imgs/image15.jpeg" alt="image-01" />
+                  <p>Scott H. Young</p>
+                  <h4>Variability, Not Repetition, is the Key to Mastery</h4>
+                  <p>
+                    Bruce Lee is reported to have said, “I fear not the man who
+                    has practiced 10,000 kicks once, but the man who has
+                    practiced one kick 10,000...
+                  </p>
+                  <div class="dates">
+                    <div class="">
+                      <p>Oct 26</p>
+                      <p>7 min read</p>
+                      <p><span>Health  </span></p>
+                      <img src="assets/imgs/svg/star.svg" />
+                    </div>
+                    <img src="assets/imgs/svg/bookmark.svg" />
                   </div>
-                  <img src="assets/imgs/svg/bookmark.svg" />
                 </div>
+                <img class="img-card" src="assets/imgs/image16.jpg" />
               </div>
-              <img class="img-card" src="assets/imgs/image16.jpg" />
-            </div>
 
-            <!-- card 5  -->
+              <!-- card 5  -->
 
-            <div class="article-2">
-              <div class="text-article-2">
-                <img src="assets/imgs/image17.png" alt="image-01" />
-                <p>Paul A. DeStefanoin Human Parts</p>
-                <h4>What I Overheard as an Escape Room Actor</h4>
-                <p>
-                  Lock a group of people in a room and you’ll witness some
-                  surprising confessions
-                </p>
-                <div class="dates">
-                  <div class="">
-                    <p>Jan 18, 2020</p>
-                    <p>6 min read</p>
-                    <p><span>Experiences  </span></p>
-                    <img src="assets/imgs/svg/star.svg" />
+              <div class="article-2">
+                <div class="text-article-2">
+                  <img src="assets/imgs/image17.png" alt="image-01" />
+                  <p>Paul A. DeStefanoin Human Parts</p>
+                  <h4>What I Overheard as an Escape Room Actor</h4>
+                  <p>
+                    Lock a group of people in a room and you’ll witness some
+                    surprising confessions
+                  </p>
+                  <div class="dates">
+                    <div class="">
+                      <p>Jan 18, 2020</p>
+                      <p>6 min read</p>
+                      <p><span>Experiences  </span></p>
+                      <img src="assets/imgs/svg/star.svg" />
+                    </div>
+                    <img src="assets/imgs/svg/bookmark.svg" />
                   </div>
-                  <img src="assets/imgs/svg/bookmark.svg" />
                 </div>
+                <img class="img-card" src="assets/imgs/image18.jpeg" />
               </div>
-              <img class="img-card" src="assets/imgs/image18.jpeg" />
-            </div>
 
-            <!-- card 6  -->
+              <!-- card 6  -->
 
-            <div class="article-2">
-              <div class="text-article-2">
-                <img src="assets/imgs/image19.jpeg" alt="image-01" />
-                <p>Kim Scottn</p>
-                <h4>
-                  6 Steps for Setting Measurable Goals to Avoid “Productivity
-                  Paranoia”
-                </h4>
-                <p>
-                  With more people working in remote and hybrid environments
-                  than ever before, company, team and individual goals must be
-                  explicit and…
-                </p>
-                <div class="dates">
-                  <div class="">
-                    <p>Oct 24</p>
-                    <p>6 min read</p>
-                    <p><span>Health  </span></p>
-                    <img src="assets/imgs/svg/star.svg" />
+              <div class="article-2">
+                <div class="text-article-2">
+                  <img src="assets/imgs/image19.jpeg" alt="image-01" />
+                  <p>Kim Scottn</p>
+                  <h4>
+                    6 Steps for Setting Measurable Goals to Avoid “Productivity
+                    Paranoia”
+                  </h4>
+                  <p>
+                    With more people working in remote and hybrid environments
+                    than ever before, company, team and individual goals must be
+                    explicit and…
+                  </p>
+                  <div class="dates">
+                    <div class="">
+                      <p>Oct 24</p>
+                      <p>6 min read</p>
+                      <p><span>Health  </span></p>
+                      <img src="assets/imgs/svg/star.svg" />
+                    </div>
+                    <img src="assets/imgs/svg/bookmark.svg" />
                   </div>
-                  <img src="assets/imgs/svg/bookmark.svg" />
                 </div>
+                <img class="img-card" src="assets/imgs/image20.jpg" />
               </div>
-              <img class="img-card" src="assets/imgs/image20.jpg" />
             </div>
-          </div>
 
-          <div class="right-column">
-            <h5>DISCOVER MORE OF WHAT MATTERS TO YOU</h5>
-            <div>
-              <p>Programming</p>
-              <p>Data Science</p>
-              <p>Technology</p>
-              <p>Self Improvement</p>
-              <p>Writing</p>
-              <p>Relationships</p>
-              <p>Machine Learning</p>
-              <p>Productivity</p>
-              <p>Politics</p>
+            <div class="right-column">
+              <h5>DISCOVER MORE OF WHAT MATTERS TO YOU</h5>
+              <div class="options">
+                <p>Programming</p>
+                <p>Data Science</p>
+                <p>Technology</p>
+                <p>Self Improvement</p>
+                <p>Writing</p>
+                <p>Relationships</p>
+                <p>Machine Learning</p>
+                <p>Productivity</p>
+                <p>Politics</p>
+              </div>
+              <ul>
+                <li>Help</li>
+                <li>Status</li>
+                <li>Writers</li>
+                <li>Blog</li>
+                <li>Careers</li>
+                <li>Privacy</li>
+                <li>Terms</li>
+                <li>About</li>
+                <li>Knowable</li>
+              </ul>
             </div>
           </div>
         </section>
       </section>
     </main>
+    <script src="js/index.js"></script>
   </body>
 </html>
