--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
       <div>
         <h1 class="spectral-bold">Medium</h1>
         <ul>
-          <li>Our Story</li>
-          <li>Membership</li>
-          <li>Write</li>
-          <li>Sign in</li>
-          <li><button>Get Started</button></li>
+          <li><a href="#">Our Story </a></li>
+          <li><a href="#"> Membership</a></li>
+          <li><a href="#"> Write</a></li>
+          <li><a href="#">Sign in </a></li>
+          <li>
+            <button><a href="#">Get Started </a></button>
+          </li>
         </ul>
       </div>
     </nav>
